adding submission site and key dates

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 						<li> Visualization and Interfaces for Tabular Data Analysis </li>
 						<li> Data Wrangling for Tabular Data Analysis </li>
 						<li> Deep Learning and Representation Learning for Tabular Data Analysis </li>
+						<li> Foundation Models for Tabular Data Analysis </li>
 						<li> Extraction and Analysis of Tabular Data from (HTML/PDF) Documents and Images </li>
 						<li> Analysis of Tabular Data on the Web (Web Tables) </li>
 						<li> Practical Applications of Tabular Data Analysis </li>
@@ -136,13 +137,32 @@
 					long, with unlimited references. <b>Posters</b> should not exceed <b>2 pages</b> not
 					including references.
 					<br><br>
-					Submission website and key dates will be anounced soon.
-
+					Submission site: <a
+						href="https://cmt3.research.microsoft.com/TaDA2023">https://cmt3.research.microsoft.com/TaDA2023</a><br>
+					Submissions should follow the double-column CEUR-ART template:
+					<a
+						href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw</a>
+					<br>
+					<p>
+						Submissions will be single-blind.
+						Authors of accepted papers will have the option to include their papers in the CEUR-ART
+						proceedings
+						of the workshop. At least one co-author is expected to register for the VLDB 2023 conference and
+						present the paper in-person.
+					</p>
+					<header>
+						<h3>Important Dates </h3>
+					</header>
+					<li>Abstract submission deadline: May 8, 2023</li>
+					<li>Submission deadline: <b>May 15, 2023</b></li>
+					<li>Notification of acceptance: June 23, 2023</li>
+					<li>Camera-ready copy due: July 20, 2023</li>
+					All Times are Anywhere on Earth (AoE).
 				</div>
 			</section>
 
 			<!-- Program -->
-			<section id="program" class="main">
+			<section id=" program" class="main">
 				<div class="content">
 					<header class="major">
 						<h2>Program</h2>
