paper lengths update

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 					</header>
 					Contributions to the workshop can take the form of technical papers, posters, or statements of
 					interest addressing various aspects of tabular data analysis, as well as reports on SemTab
-					Challenge participation. <b>Long technical papers</b> should have a maximum of <b>8 pages</b> of
-					content and
-					an unlimited number of references. <b>Short technical papers</b> should be no more than <b>4
+					Challenge participation. <b>Long technical papers</b> should be <b>8-10 pages</b> long.
+					<b>Short technical papers</b> should be no more than <b>4
 						pages</b>
-					long, with unlimited references. <b>Posters</b> should not exceed <b>2 pages</b> not
-					including references.
+					long. <b>Posters</b> should not exceed <b>2 pages</b>. References do <b>not</b> count towards the
+					page
+					limits mentioned above.
 					<br><br>
 					Submission site: <a
 						href="https://cmt3.research.microsoft.com/TaDA2023">https://cmt3.research.microsoft.com/TaDA2023</a><br>
