updated hyperlink to CEUR-ART template

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 					<br><br>
 					Submission site: <a
 						href="https://cmt3.research.microsoft.com/TaDA2023">https://cmt3.research.microsoft.com/TaDA2023</a><br>
-					Submissions should follow the double-column CEUR-ART template:
+					Submissions should follow the double-column
 					<a
-						href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw</a>
+						href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">CEUR-ART template</a>
 					<br>
 					<p>
 						Submissions will be single-blind.
