--- a/index.html
+++ b/index.html
@@ -208,7 +208,30 @@
 					</ul>
 					<b>Program Committee:</b>
 					<ul>
-						<li>Will be announced soon.</li>
+						<li>Omar Benjelloun (Google)</li>
+						<li>Rafael Berlanga Llavori (University Jaume I)</li>
+						<li>Jiaoyan Chen (The University of Manchester)</li>
+						<li>Peter Christen (The Australian National University)</li>
+						<li>Vassilis Christophides (ENSEA)</li>
+						<li>Vincenzo Cutrona (SUPSI)</li>
+						<li>Anastasia Dimou (KU Leuven)</li>
+						<li>Michael R. Glass (IBM Research AI)</li>
+						<li>Ekaterini Ioanou (Tilburg University)</li>
+						<li>Asterios Katsifodimos (TU Delft)</li>
+						<li>Udayan Khurana (IBM Research)</li>
+						<li>Hongrae Lee (Google)</li>
+						<li>Venkata Vamsikrishna Meduri (IBM Research, Almaden)</li>
+						<li>Marco Mesiti (University of Milan)</li>
+						<li>Renée Miller (Northeastern University)</li>
+						<li>Carina Negreanu (Microsoft Research)</li>
+						<li>Papotti Paolo (EURECOM)</li>
+						<li>George Papadakis (University of Athens)</li>
+						<li>Lucian Popa (IBM Almaden Research Center)</li>
+						<li>Ismael Sanz (Universitat Jaume I)</li>
+						<li>Roee Shraga (Northeastern University)</li>
+						<li>Kostas Stefanidis (Tampere University)</li>
+						<li>Raphael Troncy (EURECOM)</li>
+						<li>You Wu (Google)</li>
 					</ul>
 				</div>
 			</section>
