small change in PC members order

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 						<li>Marco Mesiti (University of Milan)</li>
 						<li>Renée Miller (Northeastern University)</li>
 						<li>Carina Negreanu (Microsoft Research)</li>
-						<li>Papotti Paolo (EURECOM)</li>
 						<li>George Papadakis (University of Athens)</li>
+						<li>Paolo Papotti (EURECOM)</li>
 						<li>Lucian Popa (IBM Almaden Research Center)</li>
 						<li>Ismael Sanz (Universitat Jaume I)</li>
 						<li>Roee Shraga (Northeastern University)</li>
