--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 						href="https://cmt3.research.microsoft.com/TaDA2023">https://cmt3.research.microsoft.com/TaDA2023</a><br>
 					Submissions should follow the double-column
 					<a
-						href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">CEUR-ART template</a>
+						href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">CEUR-ART
+						template</a>
 					<br>
 					<p>
 						Submissions will be single-blind.
@@ -256,6 +257,16 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5K2JM7D3XG"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-5K2JM7D3XG');
+	</script>
 
 </body>
 
