--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<span class="logo"><img src="images/logo.svg" alt="" /></span>
-			<h1>Tabular Data Analysis (TaDA) Workshop @ VLDB 2023</h1>
+			<h1 property="dc:title">Tabular Data Analysis (TaDA) Workshop @ VLDB 2023</h1>
 			<p>Collocated with the 49th International Conference on Very Large Data Bases (VLDB) -
 				Vancouver, Canada - September 1, 2023
 			</p>
@@ -191,21 +191,22 @@
 					</header>
 					<b>Organizing Committee:</b>
 					<ul>
-						<li>Vasilis Efthymiou (main contact person) - vefthym@ics.forth.gr</li>
-						<li>Sainyam Galhotra - sainyam@uchicago.edu </li>
-						<li>Oktie Hassanzadeh - hassanzadeh@us.ibm.com </li>
-						<li>Ernesto Jiménez-Ruiz - ernesto.jimenez-ruiz@city.ac.uk</li>
-						<li>Kavitha Srinivas - kavitha.srinivas@ibm.com</li>
+						<li><span itemprop="name">Vasilis Efthymiou</span> (main contact person) - vefthym@ics.forth.gr
+						</li>
+						<li><span itemprop="name">Sainyam Galhotra</span> - sainyam@uchicago.edu </li>
+						<li><span itemprop="name">Oktie Hassanzadeh</span> - hassanzadeh@us.ibm.com </li>
+						<li><span itemprop="name">Ernesto Jiménez-Ruiz</span> - ernesto.jimenez-ruiz@city.ac.uk</li>
+						<li><span itemprop="name">Kavitha Srinivas</span> - kavitha.srinivas@ibm.com</li>
 					</ul>
 					<b>Steering Committee:</b>
 					<ul>
-						<li>Haoyu Dong (Microsoft)</li>
-						<li>Shi Han (Microsoft) </li>
-						<li>Madelon Hulsebos (University of Amsterdam)</li>
-						<li>Chuan Lei (AWS) </li>
-						<li>Fatemeh Nargesian (University of Rochester)</li>
-						<li>Natasha Noy (Google)</li>
-						<li>Horst Samulowitz (IBM Research)</li>
+						<li>Haoyu Dong (<span itemprop="affiliation">Microsoft</span>)</li>
+						<li>Shi Han (<span itemprop="affiliation">Microsoft</span>) </li>
+						<li>Madelon Hulsebos (<span itemprop="affiliation">University of Amsterdam</span>)</li>
+						<li>Chuan Lei (<span itemprop="affiliation">AWS</span>) </li>
+						<li>Fatemeh Nargesian (<span itemprop="affiliation">University of Rochester</span>)</li>
+						<li>Natasha Noy (<span itemprop="affiliation">Google</span>)</li>
+						<li>Horst Samulowitz (<span itemprop="affiliation">IBM Research</span>)</li>
 					</ul>
 					<b>Program Committee:</b>
 					<ul>
@@ -267,6 +268,18 @@
 
 		gtag('config', 'G-5K2JM7D3XG');
 	</script>
+
+	<script type="application/ld+json">
+		{
+		  "@id": "https://tabular-data-analysis.github.io/tada2023/",
+		  "@type": "http://schema.org/Event",
+		  "http://schema.org/description": "Tabular Data Analysis (TaDA) Workshop @ VLDB 2023. Collocated with the 49th International Conference on Very Large Data Bases (VLDB) -
+		  Vancouver, Canada - September 1, 2023. Workshop on Tabular Data Analysis held at the International Conference on Very Large Databases (VLDB)",
+		  "http://schema.org/name": "Tabular Data Analysis (TaDA) Workshop",
+		  "http://schema.org/startdate": "2023-09-01",
+		  "http://schema.org/location": "Vancouver, Canada"
+		}
+	  </script>
 
 </body>
 
