added new keynote speaker and hyperlinks

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<header id="header" class="alt">
 			<span class="logo"><img src="images/logo.svg" alt="" /></span>
 			<h1 property="dc:title">Tabular Data Analysis (TaDA) Workshop @ VLDB 2023</h1>
-			<p>Collocated with the 49th International Conference on Very Large Data Bases (VLDB) -
+			<p>Collocated with <a href="https://vldb.org/2023/">the 49th International Conference on Very Large Data Bases (VLDB)</a> -
 				Vancouver, Canada - September 1, 2023
 			</p>
 		</header>
@@ -191,8 +191,12 @@
 						<h2>Program</h2>
 					</header>
 					<p>
-						Keynote by <b>Renée Miller, Northeastern University</b> <br>
+						Keynote by <a href="https://www.khoury.northeastern.edu/people/renee-miller/"><b>Renée Miller, Northeastern University</b></a> <br>
 						Title: <b>From Discovery to Integration of Data Lake Tables</b>
+					</p>
+					<p>
+						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b><a/> <br>
+						Title: TBD
 					</p>
 					<p>
 						Detailed program TBD.
@@ -211,12 +215,12 @@
 					</header>
 					<b>Organizing Committee:</b>
 					<ul>
-						<li><span itemprop="name">Vasilis Efthymiou</span> (main contact person) - vefthym@ics.forth.gr
+						<li><span itemprop="name"><a href="https://sites.google.com/site/vefthym/home">Vasilis Efthymiou</a></span> (main contact person)
 						</li>
-						<li><span itemprop="name">Sainyam Galhotra</span> - sainyam@uchicago.edu </li>
-						<li><span itemprop="name">Oktie Hassanzadeh</span> - hassanzadeh@us.ibm.com </li>
-						<li><span itemprop="name">Ernesto Jiménez-Ruiz</span> - ernesto.jimenez-ruiz@city.ac.uk</li>
-						<li><span itemprop="name">Kavitha Srinivas</span> - kavitha.srinivas@ibm.com</li>
+						<li><span itemprop="name"><a href="https://sainyamgalhotra.com/">Sainyam Galhotra</a></span></li>
+						<li><span itemprop="name"><a href="https://research.ibm.com/people/oktie-hassanzadeh">Oktie Hassanzadeh</a></span></li>
+						<li><span itemprop="name"><a href="https://www.city.ac.uk/about/people/academics/ernesto-jimenez-ruiz">Ernesto Jiménez-Ruiz</a></span></li>
+						<li><span itemprop="name"><a href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-Kavitha.Srinivas">Kavitha Srinivas</a></span></li>
 					</ul>
 					<b>Steering Committee:</b>
 					<ul>
