--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 						Title: <b>From Discovery to Integration of Data Lake Tables</b>
 					</p>
 					<p>
-						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b><a/> <br>
+						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b></a> <br>
 						Title: TBD
 					</p>
 					<p>
