--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 						<h3>Important Dates </h3>
 					</header>
 					<ul>
-						<li>Abstract submission deadline: May 8, 2023</li>
-						<li>Submission deadline: <b>May 15, 2023</b></li>
+						<li>Abstract submission deadline: May 23, 2023</li>
+						<li>Submission deadline: <s>May 15, 2023</s> <b>May 30, 2023</b></li>
 						<li>Notification of acceptance: June 23, 2023</li>
 						<li>Camera-ready copy due: July 20, 2023</li>
 					</ul>
