added late breaking results info

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
 						<li> Practical Applications of Tabular Data Analysis </li>
 						<li> Benchmarking and Evaluation Frameworks for Tabular Data Analysis </li>
 					</ul>
+					
+					<b>Call for late breaking results:</b> We are now ready to receive your poster paper (2-page, double-column) submissions for late breaking results, until June 20, AoE. 
+					Those submissions will go through a light review phase and accepted submissions will have the opportunity to give a short presentation at a workshop session, 
+					for in-person attendees only, as well as a 5-minute recorded video presentation, shared on the workshop website.
 				</div>
 			</section>
 
@@ -177,6 +181,7 @@
 					<ul>
 						<li>Abstract submission deadline: May 23, 2023</li>
 						<li>Submission deadline: <s>May 15, 2023</s> <b>May 30, 2023</b></li>
+						<li>Late breaking results (poster) submission deadline: <b>June 20, 2023</b></li>
 						<li>Notification of acceptance: June 23, 2023</li>
 						<li>Camera-ready copy due: July 20, 2023</li>
 					</ul>
