Update Alon talk details

--- a/index.html
+++ b/index.html
@@ -201,7 +201,10 @@
 					</p>
 					<p>
 						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b></a> <br>
-						Title: TBD
+						Title: <b>Personal Digital Data: Where LLMs Meet Structured Data</b><br>
+						<b>Abstract:</b> The important question of how companies and organizations use our data has received a lot of attention in the technology and policy communities. An equally important question that deserves more focus going forward is how we, as individuals, can take advantage of the data we generate to improve our health, vitality, and productivity and our overall well-being. We create a variety of data throughout our days, including our photos, workout stats, locations we’ve been to, the stuff we buy online and the content we consume. Fusing all this data together enables us to build a fascinating timeline of our lives. To leverage these timelines in order to help us produce new satisfying experiences we need to be able to query our timelines in natural language and to share short summaries of it with external services.  
+
+This talk will start by motivating the work on fusing personal digital data including its potential pitfalls.  I will then discuss multiple approaches to the problem of querying timelines, which is an application area that forces us to consider deeply how language models can be used to query data that is partially structured and partially not. 
 					</p>
 					<p>
 						Detailed program TBD.
