--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					<p>
 						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b></a> <br>
 						Title: <b>Personal Digital Data: Where LLMs Meet Structured Data</b><br>
-						<b>Abstract:</b> The important question of how companies and organizations use our data has
+						Abstract: The important question of how companies and organizations use our data has
 						received a lot of attention in the technology and policy communities. An equally important
 						question that deserves more focus going forward is how we, as individuals, can take advantage of
 						the data we generate to improve our health, vitality, and productivity and our overall well-being.
