Update progam and keynotes info

--- a/index.html
+++ b/index.html
@@ -196,8 +196,30 @@
 						<h2>Program</h2>
 					</header>
 					<p>
+						<ul>
+							<li>10 to 10:10 - Opening</li>
+							<li>10:10 to 11:00 - Keynote talk - Renée Miller: "From Discovery to Integration of Data Lake Tables"</li>
+							<li>11:00 to 12:00 - Session 1</li>
+							<li>12:00 to 13:30 - Lunch</li>
+							<li>13:30 to 14:15 - Keynote talk - Alon Halevy: "Personal Digital Data: Where LLMs Meet Structured Data"</li>
+							<li>14:15 to 15:00 - Session 2</li>
+							<li>15:00 to 15:55 - Poster session</li>
+							<li>15:55 to 16:00 - Closing and Awards</li>
+						</ul>
+					</p>
+					<p>
 						Keynote by <a href="https://www.khoury.northeastern.edu/people/renee-miller/"><b>Renée Miller, Northeastern University</b></a> <br>
-						Title: <b>From Discovery to Integration of Data Lake Tables</b>
+						Title: <b>From Discovery to Integration of Data Lake Tables</b><br>
+						Abstract: We have made tremendous strides in providing tools for data scientists to discover new tables 
+						that are useful for their analyses. But despite these advances, the proper integration of discovered tables 
+						has been under-explored. An interesting semantics for integration, called full disjunction, was proposed in 
+						the 1990’s, but there has been little progress in using it for data science to integrate tables culled from 
+						data lakes. In this talk, I will overview both ALITE, a system that integrates tables which may be incomplete 
+						using a new scalable implementation of full disjunction, and DIALITE, an extensible discovery system that lets 
+						users discover, integrate, then analyze a set of tables. To evaluate our systems, we developed and shared 
+						three new benchmarks for integration that use real data lake tables. I will present open problems and 
+						challenges in developing and evaluating scalable table search and integration methods on real data, including 
+						the scalable development of benchmarks.
 					</p>
 					<p>
 						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b></a> <br>
