Updated keynote abstract

--- a/index.html
+++ b/index.html
@@ -211,15 +211,21 @@
 						Keynote by <a href="https://www.khoury.northeastern.edu/people/renee-miller/"><b>Renée Miller, Northeastern University</b></a> <br>
 						Title: <b>From Discovery to Integration of Data Lake Tables</b><br>
 						Abstract: We have made tremendous strides in providing tools for data scientists to discover new tables 
-						that are useful for their analyses. But despite these advances, the proper integration of discovered tables 
-						has been under-explored. An interesting semantics for integration, called full disjunction, was proposed in 
-						the 1990’s, but there has been little progress in using it for data science to integrate tables culled from 
-						data lakes. In this talk, I will overview both ALITE, a system that integrates tables which may be incomplete 
-						using a new scalable implementation of full disjunction, and DIALITE, an extensible discovery system that lets 
-						users discover, integrate, then analyze a set of tables. To evaluate our systems, we developed and shared 
-						three new benchmarks for integration that use real data lake tables. I will present open problems and 
-						challenges in developing and evaluating scalable table search and integration methods on real data, including 
-						the scalable development of benchmarks.
+						that are useful for their analyses. But despite these advances, the proper integration of discovered 
+						tables has been under-explored. An interesting semantics for integration, called full disjunction, was 
+						proposed in the 1990’s, but there has been little progress in using it for data science to integrate 
+						tables culled from data lakes. In this talk, I will overview both ALITE, a method to integrate (possibly 
+						incomplete) tables using a new scalable implementation of full disjunction, and DIALITE, an open discovery 
+						system that lets users discover, integrate, then analyze a set of tables. To evaluate our systems, we 
+						developed and shared three new benchmarks for integration that use real data lake tables. I will present 
+						open problems and challenges in developing and evaluating scalable table search and integration methods on 
+						real data.
+						
+						The ALITE [1] work was led by Aamod Khatiwada in collaboration with Professors Roee Shraga of the Worcester 
+						Polytechnic Institute, Renée Miller, and Wolfgang Gatterbauer of Northeastern University in Boston. DIALTE [2] 
+						was also led by Aamod Khatiwada in collaboration with Professors Roee Shraga and Renée Miller. <br/>
+						[1] Aamod Khatiwada, Roee Shraga, Wolfgang Gatterbauer, Renée J. Miller: Integrating Data Lake Tables. PVLDB. 16(4): 932-945 (2022).<br/>
+						[2] Aamod Khatiwada, Roee Shraga, Renée J. Miller: DIALITE: Discover, Align and Integrate Open Data Tables. ACM SIGMOD, 187-190 (2023).
 					</p>
 					<p>
 						Keynote by <a href="https://ai.facebook.com/people/alon-halevy/"><b>Alon Halevey, Meta AI</b></a> <br>
