--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 						system that lets users discover, integrate, then analyze a set of tables. To evaluate our systems, we 
 						developed and shared three new benchmarks for integration that use real data lake tables. I will present 
 						open problems and challenges in developing and evaluating scalable table search and integration methods on 
-						real data.
+						real data. <br><br>
 						
 						The ALITE [1] work was led by Aamod Khatiwada in collaboration with Professors Roee Shraga of the Worcester 
 						Polytechnic Institute, Renée Miller, and Wolfgang Gatterbauer of Northeastern University in Boston. DIALTE [2] 
