uploaded accepted papers

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 				<li><a href="#cfp">Call for Papers</a></li>
 				<li><a href="#submissions">Submissions</a></li>
 				<li><a href="#program">Program</a></li>
+				<li><a href="#papers">Accepted Papers</a></li>
 				<li><a href="#organization">Organization</a></li>
 			</ul>
 		</nav>
@@ -246,6 +247,26 @@
 					</p>
 					<p>
 					</p>
+				</div>
+			</section>
+
+			<!-- Accepted Papers -->
+			<section id="papers" class="main">
+				<div class="content">
+					<header class="major">
+						<h2>Accepted Papers</h2>
+					</header>
+					<ul>
+						<li>Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b></li>
+						<li>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b></li>
+						<li>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b></li>
+						<li>Aneta Koleva, Martin Ringsquandl, Volker Tresp. <b>Adversarial Attacks on Tables with Entity Swap</b></li>
+						<li>Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. <b>Discovering and Integrating Tabular Data</b></li>
+						<li>Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An Analysis on the Usefulness of Joining Tables in Open Government Data Portals</b></li>
+						<li>Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim  Finin, Sharad Dixit, Anupam Joshi. <b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b></li>
+						<li>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative Semantic Table Interpretation</b></li>
+						<li>Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b></li>
+					</ul>
 				</div>
 			</section>
 
