Added detailed program

--- a/index.html
+++ b/index.html
@@ -202,16 +202,31 @@
 					</header>
 					<p>
 					<ul>
-						<li>10:00 to 10:10 - Opening</li>
-						<li>10:10 to 11:00 - Keynote talk - Renée Miller: "From Discovery to Integration of Data Lake
+						<li>10:20 to 10:30 - Opening</li>
+						<li>10:30 to 11:20 - Keynote talk - Renée Miller: "From Discovery to Integration of Data Lake
 							Tables"</li>
-						<li>11:00 to 12:00 - Session 1</li>
+						<li>11:20 to 12:00 - Session 1</li>
+							<ul>
+								<li>11:20 to 11:40 Keti Korini, Christian Bizer. Column Type Annotation using ChatGPT</li>
+								<li>11:40 to 11:50 Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. Towards Generative Semantic Table Interpretation</li>
+								<li>11:50 to 12:00 Aneta Koleva, Martin Ringsquandl, Volker Tresp. Adversarial Attacks on Tables with Entity Swap</li>
+							</ul>
 						<li>12:00 to 13:30 - Lunch</li>
-						<li>13:30 to 14:15 - Keynote talk - Alon Halevy: "Personal Digital Data: Where LLMs Meet
+						<li>13:30 to 14:20 - Keynote talk - Alon Halevy: "Personal Digital Data: Where LLMs Meet
 							Structured Data"</li>
-						<li>14:15 to 15:00 - Session 2</li>
-						<li>15:00 to 15:55 - Poster session</li>
-						<li>15:55 to 16:00 - Closing and Awards</li>
+						<li>14:20 to 15:00 - Session 2</li>
+							<ul>
+								<li>14:20 to 14:30 Hamed Mirzaei, Davood Rafiei. Table Union Search with Preference</li>
+								<li>14:30 to 14:40 Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi. Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</li>
+								<li>14:40 to 14:50 Arif Usta, Semih Salihoglu. To Join or Not to Join: An Analysis on the Usefulness of Joining Tables in Open Government Data Portals</li>
+								<li>14:50 to 15:00 Liane Vogel, Carsten Binnig. WikiDBs: A Corpus Of Relational Databases From Wikidata</li>
+							</ul>
+						<li>15:00 to 15:50 - Poster session</li>
+							<ul>
+								<li>15:00 to 15:05 Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. Discovering and Integrating Tabular Data</li>
+								<li>15:05 to 15:10 Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris Plexousakis. Fair Sequential Group Recommendations in SQUIRREL Movies</li>
+							</ul>
+						<li>15:50 to 16:00 - Closing and Awards</li>
 					</ul>
 					</p>
 					<p>
